# ShardARC-Cache

./: .gitignore  CMakeLists.txt  README.md
include/: ARC.h  CacheManager.h  CacheServer.h  Database.h  ICache.h  LFU.h  LRU.h  ShardedCache.h
src/: CacheManager.cpp  CacheServer.cpp  Database.cpp  main.cpp
test/: ConcurrencyTest.cpp  ConcurrencyTest.h
